syntax = "proto3";
package mq;

enum ExchangeType
{
    UNKNOWNTYPE = 0;
    DIRECT = 1;
    FANOUT = 2;
    TOP = 3;
};

enum DeliverMode
{
    UNKNOWNMODE = 0;
    UNDURABLE = 1;
    DURABLE = 2;
};

message BasicProperties{
    string id = 1;
    DeliverMode delivery_mode = 2;
    string routing_key = 3;
};

message Message{
    message Payload{
        BasicProperties properties = 1;
        string body = 2;
    };
    Payload payload = 1;
    uint32 offset = 2;
    uint32 length = 3;
    string valid = 4;
};